--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# English translations for PROJECT.
+# French translations for PROJECT.
 # Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
@@ -7,19 +7,22 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-08-29 17:03+0300\n"
-"PO-Revision-Date: 2023-08-29 17:03+0300\n"
+"POT-Creation-Date: 2023-08-29 18:55+0300\n"
+"PO-Revision-Date: 2023-08-29 18:57+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: en\n"
-"Language-Team: en <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: fr\n"
+"Language-Team: fr <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.12.1\n"
 
+#: templates/3-index.html:4 templates/4-index.html:7
 msgid "home_title"
-msgstr "Welcome to Holberton"
+msgstr "Bienvenue chez Holberton"
 
+#: templates/3-index.html:7 templates/4-index.html:10
 msgid "home_header"
-msgstr "Hello world!"
+msgstr "Bonjour monde!"
+
