--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -24,5 +24,13 @@ msgstr "Welcome to Holberton"
 
 #: templates/3-index.html:7 templates/4-index.html:10
 msgid "home_header"
-msgstr "Hellow World!"
+msgstr "Hello World!"
 
+msgid "logged_in_as"
+msgstr "You are logged in as %(username)s."
+
+msgid "not_logged_in"
+msgstr "You are not logged in."
+
+msgid "current_time_is"
+msgstr "The current time is %(current_time)s."
