--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -24,7 +24,7 @@ msgstr "Welcome to Holberton"
 
 #: templates/3-index.html:7 templates/4-index.html:10
 msgid "home_header"
-msgstr "Hello World!"
+msgstr "Hello world!"
 
 msgid "logged_in_as"
 msgstr "You are logged in as %(username)s."
